--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
-<html lang="PT-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Hit News</title>
+    </head>
+    <body>
 
-    <title>Pricinpal page</title>
+        <header>
+            <h1>HNews</h1>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/tech">Tecnologia</a></li>
+                    <li><a href="/the-pop">Pop</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <!--CSS-->
-    <link rel="stylesheet" href="\CSS\style.css">
-</head>
-<body>
+        <main>
+            <section>
+                <h1 style="text-align: center;">Informações Principais</h1>
+            </section>
+        </main>
 
-<header>
-<h1> h1 teste do header</h1> 
-</header>
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="/about">Sobre</a></li>
+                </ul>
+            </nav>
+        </footer>
 
-<h2>testeTESTEteste</h2>
-<p> texto teste texto teste texto teste texto teste texto teste texto teste texto 
-teste texto teste texto teste texto teste texto teste texto teste texto teste texto 
-teste texto teste texto teste texto teste texto teste texto teste texto teste
-texto teste texto teste texto teste texto teste texto teste texto teste 
-texto teste texto teste texto teste texto teste texto teste texto teste</p>
-
-
-<footer>    <h1> h1 teste do footer </h1>    </footer>
-</body>
+    </body>
 </html>
