--- a/index2.html
+++ b/index2.html
@@ -14,14 +14,30 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/tech">Tecnologia</a></li>
-                <li><a href="/the-pop">Pop</a></li>
+                <li><a href="/the-pop">Sobre</a></li>
             </ul>
         </div>
 
         <div id="main-1">
 
-            <div id="prin_news" style="height: 280px; margin: 20px 20px 0 20px; background-color: black;">
-                <p style=" color: white; text-align: center; ">Slide de imagens</p>
+            <div class="content-1">
+                <div id="prin_news">
+                    <p style=" color: white; text-align: center; ">Slide de imagens</p>
+                </div>
+                <div id="form_contact-1">
+                    <form action="/to_contact" method="post">
+                        <h3 style="border-bottom: 1px solid black;margin: 0 0 10px 0;">Newsletter</h3>
+                        <div class="input-1">
+                            <label for="nome">Nome:</label>
+                            <input type="text" name="nome">
+                        </div>
+                        <div class="input-1">
+                            <label for="nome">Email:</label>
+                            <input type="text" name="nome">
+                        </div>
+                        <button type="button" class="button-1">Enviar</button>
+                    </form>
+                </div>
             </div>
 
             <div class="content-1">
@@ -44,7 +60,7 @@
                     </div>
                     <div class="news_card-1">
                         <a href="/news_0">
-                            <img src="IMGS/97e1f653694b757bea89ccf9761320f7.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
                         </a>
                         <a href="/news_0">
                             <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
@@ -52,27 +68,17 @@
                     </div>
                 </div>
 
-                <div id="form_contact-1">
-                    <form action="/to_contact" method="post">
-                        <h3 style="border-bottom: 1px solid black;margin: 0 0 10px 0;">Newsletter</h3>
-                        <div class="input-1">
-                            <label for="nome">Nome:</label>
-                            <input type="text" name="nome">
-                        </div>
-                        <div class="input-1">
-                            <label for="nome">Email:</label>
-                            <input type="text" name="nome">
-                        </div>
-                        <button type="button" class="button-1">Enviar</button>
-                    </form>
-                </div>
+                
 
             </div>
         </div>
 
         <div id="footer">
             <ul>
-                <li><a href="/about">Sobre</a></li>
+                <li><a href="/about">Contato</a></li>
+                <li>Termos de uso</li>
+                <li>Termos de privacidade</li>
+                <li>Informações</li>
             </ul>
         </div>
 
