--- a/index2.html
+++ b/index2.html
@@ -44,20 +44,49 @@
                 <div class="recent_news-1">
                     <div class="news_card-1">
                         <a href="/news_0">
-                            <img src="IMGS/97e1f653694b757bea89ccf9761320f7.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
                         </a>
                         <a href="/news_0">
                             <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
                         </a>
                     </div>
+
                     <div class="news_card-1">
                         <a href="/news_0">
-                            <img src="IMGS/97e1f653694b757bea89ccf9761320f7.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
                         </a>
                         <a href="/news_0">
                             <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
                         </a>
                     </div>
+
+                    <div class="news_card-1">
+                        <a href="/news_0">
+                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                        </a>
+                        <a href="/news_0">
+                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
+                        </a>
+                    </div>
+
+                    <div class="news_card-1">
+                        <a href="/news_0">
+                            <img src="" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                        </a>
+                        <a href="/news_0">
+                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
+                        </a>
+                    </div>
+
+                    <div class="news_card-1">
+                        <a href="/news_0">
+                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                        </a>
+                        <a href="/news_0">
+                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
+                        </a>
+                    </div>
+
                     <div class="news_card-1">
                         <a href="/news_0">
                             <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
@@ -76,9 +105,9 @@
         <div id="footer">
             <ul>
                 <li><a href="/about">Contato</a></li>
-                <li>Termos de uso</li>
-                <li>Termos de privacidade</li>
-                <li>Informações</li>
+                <li><a href="/Project_News_IW/pages/TrmUsos.html"> Termos de uso </a></li>
+                <li><a href="/Project_News_IW/pages/TrmPvd.html"> Termos de privacidade</a></li>
+                <li><a href="">Informações</a></li>
             </ul>
         </div>
 
