--- a/index.html
+++ b/index.html
@@ -1,34 +1,113 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hit News</title>
+
+        <!-- CSS -->
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
 
-        <header>
+        <header id="header">
             <h1>HNews</h1>
             <nav>
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/tech">Tecnologia</a></li>
-                    <li><a href="/the-pop">Pop</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="./pages/news/games.html">Games</a></li>
                 </ul>
             </nav>
         </header>
 
-        <main>
-            <section>
-                <h1 style="text-align: center;">Informações Principais</h1>
+        <main id="main_1">
+            <section class="content-1">
+                <div id="prin_news">
+                    <p style=" color: white; text-align: center; ">Carrosel de imagens</p>
+                </div>
+                <div id="form_contact-1">
+                    <form action="/to_contact" method="post">
+                        <h3 style="border-bottom: 1px solid black;margin: 0 0 10px 0;">Newsletter</h3>
+                        <div class="input-1">
+                            <label for="nome">Nome:</label>
+                            <input type="text" name="nome">
+                        </div>
+                        <div class="input-1">
+                            <label for="nome">Email:</label>
+                            <input type="text" name="nome">
+                        </div>
+                        <button type="button" class="button-1">Enviar</button>
+                    </form>
+                </div>
+            </section>
+
+            <section class="content-1">
+                <div class="recent_news-1">
+                    <article class="news_card-1">
+                        <a href="/news_0">
+                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                        </a>
+                        <a href="/news_0">
+                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
+                        </a>
+                    </article>
+
+                    <article class="news_card-1">
+                        <a href="/news_0">
+                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                        </a>
+                        <a href="/news_0">
+                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
+                        </a>
+                    </article>
+
+                    <article class="news_card-1">
+                        <a href="/news_0">
+                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                        </a>
+                        <a href="/news_0">
+                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
+                        </a>
+                    </article>
+
+                    <article class="news_card-1">
+                        <a href="/news_0">
+                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                        </a>
+                        <a href="/news_0">
+                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
+                        </a>
+                    </article>
+
+                    <article class="news_card-1">
+                        <a href="/news_0">
+                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                        </a>
+                        <a href="/news_0">
+                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
+                        </a>
+                    </article>
+
+                    <article class="news_card-1">
+                        <a href="/news_0">
+                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                        </a>
+                        <a href="/news_0">
+                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
+                        </a>
+                    </article>
+                </div>
             </section>
         </main>
 
-        <footer>
+        <footer id="footer">
             <nav>
                 <ul>
-                    <li><a href="/about">Sobre</a></li>
+                    <li><a href="./pages/contact">Contato</a></li>
+                    <li><a href="./TrmUsos.html"> Termos de uso </a></li>
+                    <li><a href="./TrmPvd.html"> Termos de privacidade</a></li>
+                    <li><a href="./pages/about">Sobre</a></li>
                 </ul>
             </nav>
         </footer>
