--- a/pages/TrmPvd.html
+++ b/pages/TrmPvd.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hit News - Política Privacidade</title>
-    
+
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
@@ -17,15 +17,16 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="./games">Games</a></li>
+                <li><a href="./news/games.html">Games</a></li>
             </ul>
         </nav>
     </header>
 
-    <main  id="main_2">
+    <main id="main_2">
         <h2 style="margin-top: 0;">Política Privacidade</h2>
         <p>A sua privacidade é importante para nós. É política do Hit News respeitar a sua privacidade em relação a
-            qualquer informação sua que possamos coletar no site <a href="../index.html">Hit News</a>, e outros sites que possuímos e
+            qualquer informação sua que possamos coletar no site <a href="../index.html">Hit News</a>, e outros sites
+            que possuímos e
             operamos.</p>
         <p>Solicitamos informações pessoais apenas quando realmente precisamos delas para lhe fornecer um serviço.
             Fazemo-lo por meios justos e legais, com o seu conhecimento e consentimento. Também informamos por que
@@ -135,10 +136,10 @@
     <footer id="footer">
         <nav>
             <ul>
-                <li><a href="./contact">Contato</a></li>
+                <li><a href="./contact.html">Contato</a></li>
                 <li><a href="./TrmUsos.html"> Termos de uso </a></li>
                 <li><a href="./TrmPvd.html"> Termos de privacidade</a></li>
-                <li><a href="./about">Sobre</a></li>
+                <li><a href="./about.html">Sobre</a></li>
             </ul>
         </nav>
     </footer>
