--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                         <h3 style="border-bottom: 1px solid black;margin: 0 0 10px 0;">Newsletter</h3>
                         <div class="input-1">
                             <label for="nome">Nome:</label>
-                            <input type="text" name="nome">
+                            <input type="text" name="nome" placeholder="Digite seu nome...">
                         </div>
                         <div class="input-1">
-                            <label for="nome">Email:</label>
-                            <input type="text" name="nome">
+                            <label for="email">Email:</label>
+                            <input type="text" name="email" placeholder="Digite seu email...">
                         </div>
                         <button type="button" class="button-1">Enviar</button>
                     </form>
@@ -104,10 +104,10 @@
         <footer id="footer">
             <nav>
                 <ul>
-                    <li><a href="./pages/contact">Contato</a></li>
-                    <li><a href="./TrmUsos.html"> Termos de uso </a></li>
-                    <li><a href="./TrmPvd.html"> Termos de privacidade</a></li>
-                    <li><a href="./pages/about">Sobre</a></li>
+                    <li><a href="./pages/contact.html">Contato</a></li>
+                    <li><a href="./pages/TrmUsos.html"> Termos de uso </a></li>
+                    <li><a href="./pages/TrmPvd.html"> Termos de privacidade</a></li>
+                    <li><a href="./pages/about.html">Sobre</a></li>
                 </ul>
             </nav>
         </footer>
