--- a/pages/TrmUsos.html
+++ b/pages/TrmUsos.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="./games">Games</a></li>
+                <li><a href="./news/games.html">Games</a></li>
             </ul>
         </nav>
     </header>
@@ -83,10 +83,10 @@
     <footer id="footer">
         <nav>
             <ul>
-                <li><a href="./contact">Contato</a></li>
+                <li><a href="./contact.html">Contato</a></li>
                 <li><a href="./TrmUsos.html"> Termos de uso </a></li>
                 <li><a href="./TrmPvd.html"> Termos de privacidade</a></li>
-                <li><a href="./about">Sobre</a></li>
+                <li><a href="./about.html">Sobre</a></li>
             </ul>
         </nav>
     </footer>
