--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hit News - Contato</title>
+    <title>Hit News - Sobre</title>
     
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
@@ -23,22 +23,26 @@
     </header>
 
     <main id="main_2">
-        <form action="/send_message" method="post">
-            <h3 style="border-bottom: 1px solid black;margin: 0 0 10px 0;">Contato</h3>
-            <div class="input-1">
-                <label for="nome">Nome:</label>
-                <input type="text" name="nome" placeholder="Digite seu nome...">
-            </div>
-            <div class="input-1">
-                <label for="email">Email:</label>
-                <input type="text" name="email" placeholder="Digite seu email...">
-            </div>
-            <div class="input-1">
-                <label for="msg">Mensagem:</label>
-                <textarea name="msg" id="msg" cols="30" rows="10" placeholder="Nos envie sua mensagem para que possamos entrar em contato!"></textarea>
-            </div>
-            <button type="button" class="button-1">Enviar</button>
-        </form>
+        <section>
+            <h3>Autores</h3>
+            <ul>
+                <li>Caique Somer</li>
+                <li>Carlos Alexandre</li>
+                <li>César Savoldi</li>
+                <li>Felipe Silva</li>
+            </ul>
+
+            <h4>Repositório: <a href="https://github.com/KonoDio95/Project_News_IW" target="_blank" rel="noopener noreferrer">GitHub</a></h4>
+        </section>
+        
+        <hr>
+
+        <section>
+            <h3>Tema</h3>
+
+            <p>O tema escolhido se refere ao atual mundo da Tecnologia e suas principais novidades.</p>
+            <p>A importância da tecnologia é a chave da renovação contínua em nosso modo de viver. Por meio dela alcançamos patamares nunca antes imaginados e progredimos de maneira espantosa marcando a nossa história. Sem os avanços tecnológicos, nosso modo de vida não seria tão complexo.</p>
+        </section>
     </main>
 
 
