--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="./pages/news/games.html">Games</a></li>
+                    <li><a href="./pages/news/tech.html">Tech</a></li>
                 </ul>
             </nav>
         </header>
@@ -46,55 +46,55 @@
                 <div class="recent_news-1">
                     <article class="news_card-1">
                         <a href="/news_0">
-                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                            <img src="images/b9a6d140-3393-11ed-aede-eaa34093df39.jpg" alt="Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto">
                         </a>
                         <a href="/news_0">
-                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
-                        </a>
-                    </article>
-
-                    <article class="news_card-1">
-                        <a href="/news_0">
-                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
-                        </a>
-                        <a href="/news_0">
-                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
+                            <h3>Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto</h3>
                         </a>
                     </article>
 
                     <article class="news_card-1">
                         <a href="/news_0">
-                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                            <img src="images/b9a6d140-3393-11ed-aede-eaa34093df39.jpg" alt="Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto">
                         </a>
                         <a href="/news_0">
-                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
-                        </a>
-                    </article>
-
-                    <article class="news_card-1">
-                        <a href="/news_0">
-                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
-                        </a>
-                        <a href="/news_0">
-                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
+                            <h3>Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto</h3>
                         </a>
                     </article>
 
                     <article class="news_card-1">
                         <a href="/news_0">
-                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                            <img src="images/b9a6d140-3393-11ed-aede-eaa34093df39.jpg" alt="Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto">
                         </a>
                         <a href="/news_0">
-                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
+                            <h3>Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto</h3>
                         </a>
                     </article>
 
                     <article class="news_card-1">
                         <a href="/news_0">
-                            <img src="images/download.jpg" alt="Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado">
+                            <img src="images/b9a6d140-3393-11ed-aede-eaa34093df39.jpg" alt="Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto">
                         </a>
                         <a href="/news_0">
-                            <h3>Morre a rainha Elizabeth II, aos 96 anos, após sete décadas de reinado</h3>
+                            <h3>Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto</h3>
+                        </a>
+                    </article>
+
+                    <article class="news_card-1">
+                        <a href="/news_0">
+                            <img src="images/b9a6d140-3393-11ed-aede-eaa34093df39.jpg" alt="Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto">
+                        </a>
+                        <a href="/news_0">
+                            <h3>Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto</h3>
+                        </a>
+                    </article>
+
+                    <article class="news_card-1">
+                        <a href="/news_0">
+                            <img src="images/b9a6d140-3393-11ed-aede-eaa34093df39.jpg" alt="Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto">
+                        </a>
+                        <a href="/news_0">
+                            <h3>Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto</h3>
                         </a>
                     </article>
                 </div>
