--- a/pages/TrmPvd.html
+++ b/pages/TrmPvd.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="./news/games.html">Games</a></li>
+                <li><a href="./news/tech.html">Tech</a></li>
             </ul>
         </nav>
     </header>
