--- a/index.html
+++ b/index.html
@@ -55,46 +55,46 @@
 
                     <article class="news_card-1">
                         <a href="/news_0">
-                            <img src="images/b9a6d140-3393-11ed-aede-eaa34093df39.jpg" alt="Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto">
+                            <img src="images/843a1ee31774f920e27311046fc38aa0.jpg" alt="Google Stadia, serviço de streaming jogos, será descontinuado pela empresa">
                         </a>
                         <a href="/news_0">
-                            <h3>Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto</h3>
-                        </a>
-                    </article>
-
-                    <article class="news_card-1">
-                        <a href="/news_0">
-                            <img src="images/b9a6d140-3393-11ed-aede-eaa34093df39.jpg" alt="Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto">
-                        </a>
-                        <a href="/news_0">
-                            <h3>Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto</h3>
+                            <h3>Google Stadia, serviço de streaming jogos, será descontinuado pela empresa</h3>
                         </a>
                     </article>
 
                     <article class="news_card-1">
                         <a href="/news_0">
-                            <img src="images/b9a6d140-3393-11ed-aede-eaa34093df39.jpg" alt="Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto">
+                            <img src="images/d4cf46cc657d39f85f887714f97f277e.jpg" alt="Facebook e Instagram agora permitem compartilhamento de NFTs nos EUA">
                         </a>
                         <a href="/news_0">
-                            <h3>Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto</h3>
-                        </a>
-                    </article>
-
-                    <article class="news_card-1">
-                        <a href="/news_0">
-                            <img src="images/b9a6d140-3393-11ed-aede-eaa34093df39.jpg" alt="Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto">
-                        </a>
-                        <a href="/news_0">
-                            <h3>Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto</h3>
+                            <h3>Facebook e Instagram agora permitem compartilhamento de NFTs nos EUA</h3>
                         </a>
                     </article>
 
                     <article class="news_card-1">
                         <a href="/news_0">
-                            <img src="images/b9a6d140-3393-11ed-aede-eaa34093df39.jpg" alt="Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto">
+                            <img src="images/430327f381f82e15529b3eb652c659a8.jpg" alt="Google quer reinventar a busca na internet; confira novidades">
                         </a>
                         <a href="/news_0">
-                            <h3>Meta cria Make-A-Video, ferramenta que cria vídeos a partir de texto</h3>
+                            <h3>Google quer reinventar a busca na internet</h3>
+                        </a>
+                    </article>
+
+                    <article class="news_card-1">
+                        <a href="/news_0">
+                            <img src="images/b57b2a494db64320ffdfc31f9b0c1635.jpg" alt="A década quântica está se movendo ainda mais rápido do que esperávamos">
+                        </a>
+                        <a href="/news_0">
+                            <h3>A década quântica está se movendo ainda mais rápido do que esperávamos</h3>
+                        </a>
+                    </article>
+
+                    <article class="news_card-1">
+                        <a href="/news_0">
+                            <img src="images/40550705f6da25a07ffb9aa290b1cf39.jpg" alt="GTA 6: Suposto hacker de 17 anos alega ser inocente">
+                        </a>
+                        <a href="/news_0">
+                            <h3>GTA 6: Suposto hacker de 17 anos alega ser inocente</h3>
                         </a>
                     </article>
                 </div>
