--- a/pages/about.html
+++ b/pages/about.html
@@ -26,10 +26,21 @@
         <section>
             <h3>Autores</h3>
             <ul>
-                <li>Caique Somer</li>
-                <li>Carlos Alexandre</li>
-                <li>César Savoldi</li>
-                <li>Felipe Silva</li>
+                <li>Caique Somer<br>
+                    - Sou caíque somer, tenho 17 anos, curso informática para receber bem e pagar minhas faculdades de psicologia. Gosto de escrever no geral e odeio pessoas, só isso mesmo
+                </li>
+                <br>
+                <li>Carlos Alexandre<br>
+                    - Tenho 16 anos, estou nesse curso para desenvolver cada vez mais as minhas habilidades em programação.
+                </li>
+                <br>
+                <li>César Savoldi<br>
+                    - Tenho 16 anos, aluno da ETEC de Bebedouro, atuando no curso de informática para a internet com o intuito de melhorar os conhecimentos da área de programação.
+                </li>
+                <br>
+                <li>Felipe Silva<br>
+                    - Nascido em Bebedouro-SP, tenho 15 anos e atualmente atuo no primeiro ano do ensino médio integrado ao curso de Técnico em Informática. Faço isso pois quero desenvolver capacidades da área.
+                </li>
             </ul>
 
             <h4>Repositório: <a href="https://github.com/KonoDio95/Project_News_IW" target="_blank" rel="noopener noreferrer">GitHub</a></h4>
